# bank-deposit-manager

./: .gitignore  Cargo.toml  README.md  TODO.md
samples/: data.ods
src/: main.rs  utils.rs
