[package]
name = "bank-deposit-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.22.1", features = ["dates"] }
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
notify-rust = "4.10.0"
serde = { version = "1.0.193", features = ["derive"] }
